--- a/task1.4.ipynb
+++ b/task1.4.ipynb
@@ -135,7 +135,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 1\n",
+    "while n < 11:\n",
+    "    i = 1\n",
+    "    while i < 11:\n",
+    "        print(str(i*n), end= ' ')\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
